fixed some layout issues

--- a/www/css/bootswatch.less
+++ b/www/css/bootswatch.less
@@ -25,7 +25,12 @@ body {
 			background-color: @linkColorHover;
 		}
 	}
-	
+		
+	.btn {
+	    margin-bottom: 0;
+	 }
+
+
 
 	    
 	.basic_link > a{
@@ -88,6 +93,7 @@ body {
 .btn-warning {
   .buttonBackground(lighten(@orange, 15%), @orange);
 }
+
 
 // FORMS
 // -----------------------------------------------------
